[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Art/Medieval/WallDown.png" type="Texture" id=1]
[ext_resource path="res://TestScenes/Platform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 25.602 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 297.565, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 45.0624, 16.2525 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.1936, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.09, 105 )

[node name="WallDown" type="Node2D"]
script = ExtResource( 2 )

[node name="Height" type="Position2D" parent="."]
position = Vector2( 640, 234 )

[node name="Death" type="Area2D" parent="."]
position = Vector2( 128, 320 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2( 190.811, 38.949 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 324.759, -216 )
scale = Vector2( 32.6614, 57.4949 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 320, 136 )
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 318.811, 136 )
rotation = 0.441568
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 594.905, 250.309 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 27.0564, 10.0794 )
shape = SubResource( 4 )

[node name="Hit" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hit"]
position = Vector2( 370.49, 10.0794 )
shape = SubResource( 5 )
[connection signal="body_entered" from="Death" to="." method="_on_Death_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]
